# matrix-discord-bridge

./: .gitignore  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: publish-ghcr.yml
.helix/: languages.toml
src/: admin_commands.rs  appservice.rs  cache.rs  config.rs  db.rs  discord_client.rs  error.rs  main.rs  matrix_client.rs  user_commands.rs  utils.rs
