[package]
name = "matrix-discord-bridge"
version = "1.0.0"
edition = "2024"

[dependencies]
# Runtime
tokio = { version = "1.53.1", features = ["full"] }

# HTTP
hex = "0.4.3"
hmac = "0.13.0"
http-body-util = { version = "0.1.4", features = ["full"] }
hyper = { version = "1.11.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.20", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json", "multipart", "stream"] }
sha2 = "0.11.0"
twox-hash = "2.1.3"
url = "2.5.8"
urlencoding = "2.1.3"

# Discord
serenity = { version = "0.12.5", features = ["client", "gateway", "model", "cache"] }

# Matrix
ruma = { version = "0.16.0", features = ["appservice-api", "client-api", "events"] }
ruma-client = { version = "0.19.0", features = ["hyper-rustls", "client-api"] }

# Serialization
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"

# Persistence
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls-ring-webpki", "sqlite"] }

# Utils
anyhow = "1.0.104"
clap = { version = "4.6.3", features = ["derive"] }
constant_time_eq = "0.5.0"
futures = "0.3.33"
moka = { version = "0.12.15", features = ["logging", "sync"] }
regex = "1.13.1"
shlex = "2.0.1"
thiserror = "2.0.19"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.24.0", features = ["v4"] }

# Markdown
html-escape = "0.2.14"
pulldown-cmark = "0.13.4"
html2md = "0.2.15"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
